# VoxelEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Common.h  EngineConfig.json  EngineSettings.json  LICENSE.txt  VoxelEngine.code-workspace  VoxelEngine.filters  VoxelEngine.vcxproj  imgui.ini  main.cpp
GameData/: ResourceCache.cpp  ResourceCache.h  Voxel.h  VoxelAttribute.cpp  VoxelAttribute.h
Math/: LinearAlgebra.cpp  LinearAlgebra.h
Rendering/: AssetCache.cpp  AssetCache.h  Compass.h  DebugConsole.cpp  Renderer.cpp  Renderer.h  ShaderLayoutDefinitions.h  Shape.h  StorageCache.cpp  StorageCache.h  TestMesh.cpp  TestMesh.h  VoxelCullingCache.cpp  VoxelCullingCache.h  VoxelModel.cpp  VoxelModel.h  VoxelTextureCache.cpp  VoxelTextureCache.h
Rendering/GridRendering/: ChunkMesh.cpp  ChunkMesh.h  GridMesh.cpp  GridMesh.h  VoxelMeshing.cpp  VoxelMeshing.h
Rendering/Shaders/: Model.frag  Model.frag.spv  Model.vert  ShaderCache.cpp  ShaderCache.h  Voxel.frag  Voxel.frag.spv  Voxel.vert  Voxel.vert.spv  basic.comp  basic.comp.spv  basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  compile.bat
Shaders/: Cube.vert  Cube.vert.spv  Voxel.vert  Voxel.vert.spv  allocate.comp  basic.comp  basic.mesh
Utility/: StructOfArraysPool.cpp  StructOfArraysPool.h
WorldManagement/: VoxelVolume.cpp  VoxelVolume.h  WorldGrid.cpp  WorldGrid.h
include/: Common.h
include/GameData/: EngineFilesystem.h  ResourceCache.h  Voxel.h
include/Math/: LinearAlgebra.h
include/Rendering/: AssetCache.h  Compass.h  DebugConsole.h  Renderer.h  ShaderCache.h  ShaderLayoutDefinitions.h  Shape.h  StorageCache.h  VoxelCullingCache.h
include/Utility/: StructOfArraysPool.h
include/WorldManagement/: Generator.h  VoxelVolume.h  WorldGrid.h
res/resourcePack/hitboxes/: cube.hbx  hitboxNames.txt  player.hbx  slabDown.hbx  slabUp.hbx
res/resourcePack/models/: dirt_block.json  dirt_slab.json  grass_block.json
res/resourcePack/voxels/: dirt_block.json  (+2 more)
src/: main.cpp
src/GameData/: EngineFilesystem.cpp  ResourceCache.cpp  Voxel.cpp  VoxelAttribute.cpp
src/Math/: LinearAlgebra.cpp
src/Rendering/: AssetCache.cpp  Compass.cpp  DebugConsole.cpp  Renderer.cpp  StorageCache.cpp  VoxelCullingCache.cpp
src/Utility/: StructOfArraysPool.cpp
src/WorldManagement/: Generator.cpp  VoxelVolume.cpp  WorldGrid.cpp
(+3 files in other folders)
